user page, login / register page no connection by now to create/check users, only html and a few js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	    <script src="app/home/homeController.js"></script>
 	    <script src="app/contact/contactController.js"></script>
 	    <script src="app/lessons/lessonsController.js"></script>
+		<script src="app/user/userController.js"></script>
 	</head>
 	<body ng-app="Leadis">
 		<header>
@@ -36,8 +37,9 @@
 							<li>
 								<img class="logo-img" src="ressources/2017_logo_LeadisJourney.png">
 							</li>
+
 							<li class="dropdown pull-right">
-								<a href="#contact" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<a href="#user" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									<span class="glyphicon glyphicon-user"></span> <span class="caret"></span>
 								</a>
 								<ul class="dropdown-menu">
@@ -47,6 +49,11 @@
 									<li role="separator" class="divider"></li>
 									<li><a href="#">Separated link</a></li>
 								</ul>
+							</li>
+							<li class="pull-right">
+								<a href="#contact">
+									<span class="glyphicon glyphicon-comment"></span>
+								</a>
 							</li>
 						</ul>
 					</div>
