--- a/home.html
+++ b/home.html
@@ -10,19 +10,23 @@
 </article>
 
 <article ng-show="currentExercise">
-	<h3>
-		<a class="btn btn-default" ng-click="showPanelExercise()">{{ changeExerciseButton }}</a>
-		{{ currentExercise.title }}
-	</h3>
-	<form class="row">
-		<textarea class="col-md-8" rows="5" cols="60" ng-model="inputs"></textarea>
-		<ul class="col-md-4">
-			<li class="btn btn-default" ng-click="saveExercise()">{{ saveExerciseButton }}</li>
-			<li class="btn btn-default" ng-click="loadExercise()">{{ loadExerciseButton }}</li>
-			<li class="btn btn-default" ng-click="eraseExercise()">{{ eraseExerciseButton }}</li>
-		</ul>
-	</form>
-	</br>
-	<p> {{ results }} </p>
-	<p> {{ inputs }} </p>
+	<div class="row">
+		<h3>
+			<a class="btn btn-default" ng-click="showPanelExercise()">{{ changeExerciseButton }}</a>
+			{{ currentExercise.title }}
+		</h3>
+		<form class="row col-md-6">
+			<textarea class="col-md-12 col-sm-8" rows="5" cols="60" ng-model="inputs"></textarea>
+			<ul class="col-md-6 col-sm-4">
+				<li class="btn btn-default" ng-click="saveExercise()">{{ saveExerciseButton }}</li>
+				<li class="btn btn-default" ng-click="loadExercise()">{{ loadExerciseButton }}</li>
+				<li class="btn btn-default" ng-click="eraseExercise()">{{ eraseExerciseButton }}</li>
+			</ul>
+		</form>
+		<div class="col-md-6">
+			<canvas id="canvas" class="canvas"></canvas>
+			<p> {{ currentExercise.results }} </p>
+			<p> {{ inputs }} </p>
+		</div>
+	</div>
 </article>
