--- a/home.html
+++ b/home.html
@@ -16,11 +16,12 @@
 			{{ currentExercise.title }}
 		</h3>
 		<form class="row col-md-6">
-			<textarea class="col-md-12 col-sm-8" rows="5" cols="60" ng-model="inputs"></textarea>
+			<textarea class="col-md-12 col-sm-8" rows="5" cols="60" ng-model="user.inputs[currentExercise.value]"></textarea>
 			<ul class="col-md-6 col-sm-4">
 				<li class="btn btn-default" ng-click="saveExercise()">{{ saveExerciseButton }}</li>
 				<li class="btn btn-default" ng-click="loadExercise()">{{ loadExerciseButton }}</li>
 				<li class="btn btn-default" ng-click="eraseExercise()">{{ eraseExerciseButton }}</li>
+				<li class="btn btn-default" ng-click="launchExercise()">{{ launchExerciseButton }}</li>
 			</ul>
 		</form>
 		<div class="col-md-6">
