debug des requetes

--- a/user.html
+++ b/user.html
@@ -14,6 +14,7 @@
 			<li>
 			<div class="btn btn-default" ng-click="login_user()">Submit</div>
 		</li>
+		<li> {{ details }} </li>
 	</ul>
 	<ul class="user-form col-md-6">
 		<li><h4> {{ register }} </h4></li>
