--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>
 			Leadis Journey
 		</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="css/custom.css">
 		<link rel="stylesheet" href="css/colors.css">
