--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 			</ul>
 		</div>
 		<div class="col-md-6">
-			<canvas id="canvas" class="canvas"></canvas>
+			<canvas id="lesson04-canvas" class="canvas"></canvas>
 			<p> {{ currentExercise.results }} </p>
 			<p> {{ inputs }} </p>
 		</div>
