--- a/home.html
+++ b/home.html
@@ -1,7 +1,42 @@
-﻿<h2>
+﻿<head>
+		<script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
+		<script type="text/javascript" src="webgl-utils.js"></script>
+		<script type="text/javascript" src="webGLGeneral.js"></script>
+		<script type="text/javascript" src="cases.js"></script>
+		<script type="text/javascript" src="ObjectManager.js"></script>
+		<script type="text/javascript" src="shaderManager.js"></script>
+		<script type="text/javascript" src="3DMaths.js"></script>
+		<script id="shader-fs" type="x-shader/x-fragment">
+		    precision mediump float;
+
+		    varying vec4 vColor;
+
+		    void main(void) {
+		        gl_FragColor = vColor;
+		    }
+		</script>
+
+		<script id="shader-vs" type="x-shader/x-vertex">
+		    attribute vec3 aVertexPosition;
+		    attribute vec4 aVertexColor;
+
+		    uniform mat4 uMVMatrix;
+		    uniform mat4 uPMatrix;
+
+		    varying vec4 vColor;
+
+		    void main(void) {
+		        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+		        vColor = aVertexColor;
+		    }
+		</script>
+		<script>
+			webGLStart();
+		</script>
+</head>
+<h2>
 	{{ message }}
 </h2>
-</br>
 
 <article ng-show="!currentExercise">
 	<article ng-show="exercises.length" class="col-md-3 lesson-list">
@@ -26,8 +61,8 @@
 			</ul>
 		</div>
 		<div class="col-md-6">
-			<canvas id="lesson04-canvas" class="canvas"></canvas>
 			<p> {{ currentExercise.results }} </p>
+			<canvas id="lesson04-canvas" style="border: none;" width="500" height="500"></canvas>
 			<p> {{ inputs }} </p>
 		</div>
 	</div>
