--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 		<div class="jumbotron row">
 			<div ng-view></div>
 		</div>
-		<div class="col-md-6">
+<!-- 		<div class="col-md-6">
 			<canvas id="lesson04-canvas" style="border: none;" width="500" height="500"></canvas>
 			<p> {{ currentExercise.results }} </p>
 			<p> {{ inputs }} </p>
 		</div>
-	</body>
+ -->	</body>
 </html>
