--- a/home.html
+++ b/home.html
@@ -34,9 +34,18 @@
 			webGLStart();
 		</script>
 </head>
+<div style="float: right;">
+	<h4 ng-show="user.token">
+		Bienvenue à bord, {{ user }} !
+	</h4>
+	<a href="index.html#/user" ng-show="!user.token" class="btn btn-default">
+		Connectez-vous !
+	</a>
+</div>
 <h2>
 	{{ message }}
 </h2>
+<br/>
 
 <article ng-show="!currentExercise">
 	<article ng-show="exercises.length" class="col-md-3 lesson-list">
@@ -47,15 +56,16 @@
 <article ng-show="currentExercise">
 	<div class="row">
 		<h3>
-			<a class="btn btn-default" ng-click="showPanelExercise()">{{ changeExerciseButton }}</a>
+			<a class="btn btn-default" ng-click="showPanelExercise()" style="width:10%">{{ changeExerciseButton }}</a>
 			{{ currentExercise.title }}
 		</h3>
 		<div class="row col-md-6">
 <!-- 		<textarea class="col-md-12 col-sm-8" rows="5" cols="60" ng-model="user.inputs[currentExercise.value]"></textarea> -->
 			<div id="editor" style=" min-height: 200px; border: solid 3px gray;"></div>
+			<br/>
 			<ul class="col-md-6 col-sm-4">
-				<li class="btn btn-default" ng-click="saveExercise()">{{ saveExerciseButton }}</li>
-				<li class="btn btn-default" ng-click="loadExercise()">{{ loadExerciseButton }}</li>
+				<li class="btn btn-default btn-half" ng-click="saveExercise()">{{ saveExerciseButton }}</li>
+				<li class="btn btn-default btn-half" ng-click="loadExercise()">{{ loadExerciseButton }}</li>
 				<li class="btn btn-default" ng-click="eraseExercise()">{{ eraseExerciseButton }}</li>
 				<li class="btn btn-default" ng-click="launchExercise()">{{ launchExerciseButton }}</li>
 			</ul>
