--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<script src="libs/ace-src-noconflict/ace.js"></script>
 	    <script src="libs/angular.min.js"></script>
 	    <script src="libs/angular-route.js"></script>
+	    <script src="libs/ngStorage.min.js"></script>
+<!-- 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script> -->
 	    <script src="app/app.js"></script>
 	    <script src="app/home/homeController.js"></script>
 	    <script src="app/contact/contactController.js"></script>
@@ -102,6 +104,6 @@
 			<canvas id="lesson04-canvas" style="border: none;" width="500" height="500"></canvas>
 			<p> {{ currentExercise.results }} </p>
 			<p> {{ inputs }} </p>
-		</div>
- -->	</body>
+		</div> -->
+	</body>
 </html>
