--- a/lessons.html
+++ b/lessons.html
@@ -1,4 +1,12 @@
-﻿<h2>
+﻿<div style="float: right;">
+    <h4 ng-show="user.token">
+        Bienvenue à bord, {{ user }} !
+    </h4>
+    <a href="index.html#/user" ng-show="!user.token" class="btn btn-default">
+        Connectez-vous !
+    </a>
+</div>
+<h2>
     Lessons
 </h2>
 <br/>
