--- a/home.html
+++ b/home.html
@@ -1,42 +1,6 @@
-﻿<head>
-		<script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
-		<script type="text/javascript" src="webgl-utils.js"></script>
-		<script type="text/javascript" src="webGLGeneral.js"></script>
-		<script type="text/javascript" src="cases.js"></script>
-		<script type="text/javascript" src="ObjectManager.js"></script>
-		<script type="text/javascript" src="shaderManager.js"></script>
-		<script type="text/javascript" src="3DMaths.js"></script>
-		<script id="shader-fs" type="x-shader/x-fragment">
-		    precision mediump float;
-
-		    varying vec4 vColor;
-
-		    void main(void) {
-		        gl_FragColor = vColor;
-		    }
-		</script>
-
-		<script id="shader-vs" type="x-shader/x-vertex">
-		    attribute vec3 aVertexPosition;
-		    attribute vec4 aVertexColor;
-
-		    uniform mat4 uMVMatrix;
-		    uniform mat4 uPMatrix;
-
-		    varying vec4 vColor;
-
-		    void main(void) {
-		        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
-		        vColor = aVertexColor;
-		    }
-		</script>
-		<script>
-			webGLStart();
-		</script>
-</head>
-<div style="float: right;">
+﻿<div style="float: right;">
 	<h4 ng-show="user.token">
-		Bienvenue à bord, {{ user }} !
+		Bienvenue à bord, {{ user.details.Email }} !
 	</h4>
 	<a href="index.html#/user" ng-show="!user.token" class="btn btn-default">
 		Connectez-vous !
