--- a/index.html
+++ b/index.html
@@ -11,50 +11,25 @@
 		<link rel="stylesheet" href="css/custom.css">
 		<link rel="stylesheet" href="css/colors.css">
 		<link rel="stylesheet" href="css/fonts.css">
+
 		<script src="libs/ace-src-noconflict/ace.js"></script>
 	    <script src="libs/angular.min.js"></script>
 	    <script src="libs/angular-route.js"></script>
 	    <script src="libs/ngStorage.min.js"></script>
-<!-- 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script> -->
+
 	    <script src="app/app.js"></script>
 	    <script src="app/home/homeController.js"></script>
 	    <script src="app/contact/contactController.js"></script>
 	    <script src="app/lessons/lessonsController.js"></script>
 		<script src="app/user/userController.js"></script>
-		<script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
-		<script type="text/javascript" src="webgl-utils.js"></script>
-		<script type="text/javascript" src="webGLGeneral.js"></script>
-		<script type="text/javascript" src="cases.js"></script>
-		<script type="text/javascript" src="ObjectManager.js"></script>
-		<script type="text/javascript" src="shaderManager.js"></script>
-		<script type="text/javascript" src="3DMaths.js"></script>
-		<script id="shader-fs" type="x-shader/x-fragment">
-		    precision mediump float;
 
-		    varying vec4 vColor;
-
-		    void main(void) {
-		        gl_FragColor = vColor;
-		    }
-		</script>
-
-		<script id="shader-vs" type="x-shader/x-vertex">
-		    attribute vec3 aVertexPosition;
-		    attribute vec4 aVertexColor;
-
-		    uniform mat4 uMVMatrix;
-		    uniform mat4 uPMatrix;
-
-		    varying vec4 vColor;
-
-		    void main(void) {
-		        gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
-		        vColor = aVertexColor;
-		    }
-		</script>
-
+		<script src="libs/ThreeJS/three.js"></script>
+		<script src="libs/ThreeJS/Projector.js"></script>
+		<script src="libs/ThreeJS/CanvasRenderer.js"></script>
+		<script src="libs/ThreeJS/stats.min.js"></script>
+		<script src="libs/ThreeJS/main.js"></script>
 	</head>
-	<body ng-app="Leadis" onload="webGLStart();">
+	<body ng-app="Leadis">
 		<header>
 			<nav class="navbar navbar-inverse navbar-fixed-top">
 				<div class="container-fluid">
