--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 	    <script src="app/lessons/lessonsController.js"></script>
 		<script src="app/user/userController.js"></script>
 
-		<script src="libs/ThreeJS/three.js"></script>
-		<script src="libs/ThreeJS/Projector.js"></script>
-		<script src="libs/ThreeJS/CanvasRenderer.js"></script>
-		<script src="libs/ThreeJS/stats.min.js"></script>
-		<script src="libs/ThreeJS/main.js"></script>
+
+		<script type="text/javascript" src="libs/ThreeJS/three.js"></script>
+		<script type="text/javascript" src="libs/ThreeJS/OrbitControls.js"></script>
+		<script type="text/javascript" src="libs/ThreeJS/Projector.js"></script>
+		<script type="text/javascript" src="libs/ThreeJS/CanvasRenderer.js"></script>
+		<script type="text/javascript" src="libs/ThreeJS/main.js"></script>
+		<script type="text/javascript" src="libs/ThreeJS/map.js"></script>
 	</head>
 	<body ng-app="Leadis">
 		<header>
