--- a/home.html
+++ b/home.html
@@ -1,8 +1,16 @@
 ﻿<div style="float: right;">
-    <h4 ng-show="user.token">
+    <p ng-show="user.token">
         Bienvenue à bord, {{ user.details.Email }} !
-    </h4>
-    <div ng-show="user.token" class="btn btn-default btn-half stick-right" ng-click="logout_user()">Logoff</div>
+	</p>
+	<div class="stick-right" style="width: 60%">
+		<div>Avancement</div>
+		<div class="progress">
+			<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
+				style="width:{{user.progres}}%"></div>
+		</div>
+	</div>
+	<div ng-show="user.token" class="btn btn-default btn-half stick-right" ng-click="logout_user()">Logoff</div>
+
     <a href="index.html#/user" ng-show="!user.token" class="btn btn-default">
         Connectez-vous !
     </a>
@@ -25,7 +33,6 @@
 			{{ currentExercise.title }}
 		</h3>
 		<div class="row col-md-6">
-<!-- 		<textarea class="col-md-12 col-sm-8" rows="5" cols="60" ng-model="user.inputs[currentExercise.value]"></textarea> -->
 			<div id="editor" style=" min-height: 200px; border: solid 3px gray;"></div>
 			<br/>
 			<ul class="col-md-6 col-sm-4">
@@ -39,6 +46,9 @@
 			<p> {{ currentExercise.results }} </p>
 			<div id="canvas" style="border: none;" width="500" height="500"></div>
 			<p> {{ inputs }} </p>
+<!-- 		    <article ng-show="video">
+		    	<video ng-src="{{ video }}" controls preload="auto" style="height: 300px;"></video>
+		    </article> -->
 		</div>
 	</div>
 </article>
