--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 	    <script src="libs/angular-route.js"></script>
 	    <script src="libs/ngStorage.min.js"></script>
 
+	    <script src="js/three.js"></script>
+		<script src="js/setup.js"></script>
+		<script src="js/render.js"></script>
+		<script src="js/loader.js"></script>
+		<script src="js/animate.js"></script>
+
 	    <script src="app/app.js"></script>
 	    <script src="app/home/homeController.js"></script>
 	    <script src="app/contact/contactController.js"></script>
