--- a/index.html
+++ b/index.html
@@ -51,15 +51,8 @@
 
 							<li class="dropdown pull-right">
 								<a href="#user" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									<span class="glyphicon glyphicon-user"></span> <span class="caret"></span>
+									<span class="glyphicon glyphicon-user"></span>
 								</a>
-								<ul class="dropdown-menu">
-									<li><a href="#">Action</a></li>
-									<li><a href="#">Another action</a></li>
-									<li><a href="#">Something else here</a></li>
-									<li role="separator" class="divider"></li>
-									<li><a href="#">Separated link</a></li>
-								</ul>
 							</li>
 							<li class="pull-right">
 								<a href="#contact">
